# VopickaDEV-SIRM_SPF_libs

./: .gitignore  LICENSE  README.md  pyproject.toml  reset.bat  setup.py
sirm_spf_libs/: __init__.py
sirm_spf_libs/Config/: __init__.py
src/sirm_spf_libs/: __init__.py
src/sirm_spf_libs/Config/: DatabaseDSN.py
src/sirm_spf_libs/Tools/: Classify.py  Get_Classes.py  __init__.py
